@@ -50,12 +50,14 @@ EXTRA_DIST = \
 dist_doc_DATA = $(docfiles)
 
 distcheck-hook:
-	mkdir $(distdir)/_build/cmake \
-	&& cd $(distdir)/_build/cmake \
-	&& cmake ../.. \
-	&& $(MAKE) \
-	&& ctest -V \
-	&& $(MAKE) DESTDIR=../../_inst/cmake install
+	if [ -x "$(CMAKE)" ]; then \
+	  mkdir $(distdir)/_build/cmake \
+	  && cd $(distdir)/_build/cmake \
+	  && cmake ../.. \
+	  && $(MAKE) \
+	  && ctest -V \
+	  && $(MAKE) DESTDIR=../../_inst/cmake install ; \
+	fi
 	$(RM) -r $(distdir)/_build/cmake
 	$(RM) -r $(distdir)/_inst/cmake
 
